--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,20 +92,6 @@ jobs:
           java-version: 11
       - run: ./gradlew build -PjenkinsBuild
         name: Build with Gradle
-      - name: Import Developer ID Certificate
-        uses: wpilibsuite/import-signing-certificate@v1
-        with:
-          certificate-data: ${{ secrets.APPLE_CERTIFICATE_DATA }}
-          certificate-passphrase: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          keychain-password: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
-        if: |
-          github.repository_owner == 'wpilibsuite' &&
-          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
-      - run: ./gradlew build -PjenkinsBuild -PdeveloperID=${{ secrets.APPLE_DEVELOPER_ID }}
-        name: Sign Binaries with Developer ID
-        if: |
-          github.repository_owner == 'wpilibsuite' &&
-          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       - uses: actions/upload-artifact@v2
         with:
           name: macOS
@@ -113,7 +99,7 @@ jobs:
 
   build-mac-arm:
     name: "Build - macOS (Arm)"
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - uses: actions/checkout@v2
         with:
@@ -123,28 +109,38 @@ jobs:
           java-version: 11
       - run: ./gradlew build -PjenkinsBuild -Pforcealternatemacbuild
         name: Build with Gradle
-      - name: Import Developer ID Certificate
-        uses: wpilibsuite/import-signing-certificate@v1
-        with:
-          certificate-data: ${{ secrets.APPLE_CERTIFICATE_DATA }}
-          certificate-passphrase: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          keychain-password: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
-        if: |
-          github.repository_owner == 'wpilibsuite' &&
-          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
-      - run: ./gradlew build -PjenkinsBuild -PdeveloperID=${{ secrets.APPLE_DEVELOPER_ID }}
-        name: Sign Binaries with Developer ID
-        if: |
-          github.repository_owner == 'wpilibsuite' &&
-          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       - uses: actions/upload-artifact@v2
         with:
           name: macOSArm
           path: gradleDir/outputs/
 
+  make_universal:
+    name: Make Universal
+    needs: [build-mac, build-mac-arm]
+    runs-on: macos-11
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: macOS
+          path: build/downloads
+      - uses: actions/download-artifact@v2
+        with:
+          name: macOSArm
+          path: build/downloads
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - run: ./gradlew copyToUpload -Prunmerge
+        name: Build with Gradle
+      - uses: actions/upload-artifact@v2
+        with:
+          name: macOSUniversal
+          path: build/toUpload/
+
   combine:
     name: Combine
-    needs: [build-docker, build-windows, build-mac, build-mac-arm]
+    needs: [build-docker, build-windows, make_universal]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
