--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,6 +133,23 @@ jobs:
           java-version: 11
       - run: ./gradlew copyToUpload -Prunmerge
         name: Build with Gradle
+        if: |
+          github.repository_owner != 'wpilibsuite' ||
+          (github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/v'))
+      - name: Import Developer ID Certificate
+        uses: wpilibsuite/import-signing-certificate@v1
+        with:
+          certificate-data: ${{ secrets.APPLE_CERTIFICATE_DATA }}
+          certificate-passphrase: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
+          keychain-password: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
+        if: |
+          github.repository_owner == 'wpilibsuite' &&
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+      - run: ./gradlew copyToUpload -Prunmerge -PdeveloperID=${{ secrets.APPLE_DEVELOPER_ID }}
+        name: Sign Binaries with Developer ID
+        if: |
+          github.repository_owner == 'wpilibsuite' &&
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
       - uses: actions/upload-artifact@v2
         with:
           name: macOSUniversal
