--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ ext {
             '-DBUILD_opencv_apps=OFF',
             '-DBUILD_TESTS=OFF',
             '-DBUILD_PERF_TESTS=OFF',
+            "-DOPENCV_EXTRA_MODULES_PATH=$rootDir/opencv_contrib/modules/aruco",
             '-DCMAKE_INSTALL_PREFIX=install'
     ]
 }
