--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ ext {
             '-DBUILD_TESTS=OFF',
             '-DBUILD_PERF_TESTS=OFF',
             "-DOPENCV_EXTRA_MODULES_PATH=$rootDir/opencv_contrib/modules/aruco",
+            '-DWITH_TBB=ON',
             '-DCMAKE_INSTALL_PREFIX=install'
     ]
 }
