Update to gradle 8.1, enable windows arm64 builds

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,9 @@ jobs:
           - artifact-name: Win32
             architecture: x86
             build-options: "-PskipRelease -PskipSources"
+          - artifact-name: WinArm64
+            architecture: x64
+            build-options: "-PskipRelease -PskipSources -Pplatform=windows-arm64"
 
     name: "Build - ${{ matrix.artifact-name }}"
     runs-on: windows-2019
