--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,14 +29,14 @@ jobs:
     runs-on: ubuntu-latest
     container: ${{ matrix.container }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: 'true'
       - run: sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/* && sudo rm -f /bin/ant && sudo ln -s /usr/share/ant/bin/ant /bin/ant
         name: Install Ant
       - run: ./gradlew build -PjenkinsBuild ${{ matrix.build-options }}
         name: Build with Gradle
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.artifact-name }}
           path: gradleDir/outputs/
@@ -62,12 +62,13 @@ jobs:
     name: "Build - ${{ matrix.artifact-name }}"
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: 'true'
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'zulu'
           architecture: ${{ matrix.architecture }}
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v1.13
@@ -79,7 +80,7 @@ jobs:
           gradlew build -PjenkinsBuild ${{ matrix.build-options }}
         shell: cmd
         name: Build with Gradle
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.artifact-name }}
           path: gradleDir/outputs/
@@ -88,19 +89,20 @@ jobs:
     name: "Build - macOS"
     runs-on: macOS-11
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: 'true'
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'zulu'
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v1.13
         with:
           cmake-version: '3.24.3'
       - run: ./gradlew build -PjenkinsBuild
         name: Build with Gradle
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: macOS
           path: gradleDir/outputs/
@@ -109,19 +111,20 @@ jobs:
     name: "Build - macOS (Arm)"
     runs-on: macos-11
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: 'true'
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'zulu'
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v1.13
         with:
           cmake-version: '3.24.3'
       - run: ./gradlew build -PjenkinsBuild -Pforcealternatemacbuild
         name: Build with Gradle
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: macOSArm
           path: gradleDir/outputs/
@@ -131,18 +134,19 @@ jobs:
     needs: [build-mac, build-mac-arm]
     runs-on: macos-11
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v2
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
         with:
           name: macOS
           path: build/downloads
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: macOSArm
           path: build/downloads
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'zulu'
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v1.13
         with:
@@ -166,7 +170,7 @@ jobs:
         if: |
           github.repository_owner == 'wpilibsuite' &&
           (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: macOSUniversal
           path: build/toUpload/
@@ -176,10 +180,10 @@ jobs:
     needs: [build-docker, build-windows, make_universal]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           repository: wpilibsuite/build-tools
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           path: combiner/products/build/allOutputs
       - name: Flatten Artifacts
@@ -200,7 +204,7 @@ jobs:
           RUN_AZURE_ARTIFACTORY_RELEASE: 'TRUE'
           ARTIFACTORY_PUBLISH_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
           ARTIFACTORY_PUBLISH_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: Maven
           path: ~/releases
