--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,9 @@ jobs:
           java-version: 11
           distribution: 'zulu'
           architecture: ${{ matrix.architecture }}
+      - name: Set Java Heap Size
+        run: sed -i 's/-Xmx2g/-Xmx1g/g' gradle.properties
+        if: matrix.artifact-name == 'Win32'
       - run: |
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
           set PATH=%PATH%;%ANT_HOME%\bin
