--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'java'
 
 def date = new Date()
 def formattedDate = date.format('yyMMdd')
-ext.version = "4.6.0"
-ext.soVersion = "4.6"
+ext.version = "4.8.0"
+ext.soVersion = "4.8"
 ext.libVersion = "${ext.version.replace(".", "")}"
 
 ext.licenseFile = file("$rootDir/opencv/LICENSE")
@@ -238,7 +238,8 @@ if (project.platform == "linux-athena") {
                     '-DENABLE_NEON=ON' +
                     '-DENABLE_VFPV3=ON' +
                     '-DOPENCV_EXTRA_FLAGS_DEBUG=-Og' +
-                    "-DCMAKE_MODULE_PATH=$rootDir/arm-frc-modules"
+                    "-DCMAKE_MODULE_PATH=$rootDir/arm-frc-modules" +
+                    '-DOPENCV_FORCE_LIBATOMIC_COMPILER_CHECK=ON'
             } else if (project.platform == "linux-arm64") {
                 toolchain = projectDir.canonicalPath + "/aarch64-bullseye-gnu.toolchain.cmake"
                 println "Using toolchain '${toolchain}'"
