Enable gstreamer and protobuf

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ ext {
             '-DWITH_OPENCL=OFF',
             '-DWITH_FFMPEG=OFF',
             '-DWITH_OPENEXR=OFF',
-            '-DWITH_GSTREAMER=OFF',
+            '-DWITH_GSTREAMER=ON',
             '-DWITH_LAPACK=OFF',
             '-DWITH_GTK=OFF',
             '-DWITH_1394=OFF',
@@ -54,7 +54,7 @@ ext {
             '-DWITH_WEBP=OFF',
             '-DBUILD_JAVA=ON',
             '-DBUILD_WITH_STATIC_CRT=OFF',
-            '-DWITH_PROTOBUF=OFF',
+            '-DWITH_PROTOBUF=ON',
             '-DWITH_DIRECTX=OFF',
             '-DENABLE_CXX11=ON',
             '-DOPENCV_JAVA_SOURCE_VERSION=1.8',
