--- a/build.gradle
+++ b/build.gradle
@@ -210,6 +210,10 @@ if (project.platform == "linux-athena") {
             def args = defaultCmakeArgs
             if (buildType.contains("Shared")) {
                 args = args + '-DBUILD_SHARED_LIBS=ON' + '-DOPENCV_DEBUG_POSTFIX=d'
+
+                if (project.platform.contains('windows')) {
+                    args = args + '-DCMAKE_SHARED_LINKER_FLAGS=/DEPENDENTLOADFLAG:0x1100'
+                }
             } else {
                 args = args + '-DBUILD_SHARED_LIBS=OFF'
             }
