Set DependentLoadFlags on shared windows binaries (#76)
* Set DependentLoadFlags on shared windows binaries

* Bump path

* Switch to 2024 roborio compiler part 2

--- a/build.gradle
+++ b/build.gradle
@@ -183,8 +183,8 @@ def stripExe = 'strip'
 def objCopyExe = 'objcopy'
 
 if (project.platform == "linux-athena") {
-    stripExe = 'arm-frc2023-linux-gnueabi-strip'
-    objCopyExe = 'arm-frc2023-linux-gnueabi-objcopy'
+    stripExe = 'arm-frc2024-linux-gnueabi-strip'
+    objCopyExe = 'arm-frc2024-linux-gnueabi-objcopy'
 } else if (project.platform == "linux-arm32") {
     stripExe = 'armv6-bullseye-linux-gnueabihf-strip'
     objCopyExe = 'armv6-bullseye-linux-gnueabihf-objcopy'
@@ -210,6 +210,10 @@ if (project.platform == "linux-athena") {
             def args = defaultCmakeArgs
             if (buildType.contains("Shared")) {
                 args = args + '-DBUILD_SHARED_LIBS=ON' + '-DOPENCV_DEBUG_POSTFIX=d'
+
+                if (project.platform.contains('windows')) {
+                    args = args + '-DCMAKE_SHARED_LINKER_FLAGS=/DEPENDENTLOADFLAG:0x1100'
+                }
             } else {
                 args = args + '-DBUILD_SHARED_LIBS=OFF'
             }
