Add aruco headers.

--- a/publish.gradle
+++ b/publish.gradle
@@ -86,6 +86,10 @@ task cppHeadersZip(type: Zip, dependsOn: make) {
         exclude '**/CMakeLists.txt'
     }
 
+    from ('opencv_contrib/modules/aruco') {
+        into '/opencv2/contrib/aruco'
+    }
+
     from (project.cmakeBuildDirectory.resolve('opencv2').toFile()) {
         into '/opencv2/'
     }
