--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - container: wpilib/roborio-cross-ubuntu:2024-22.04
+          - container: wpilib/roborio-cross-ubuntu:2025-22.04
             artifact-name: Athena
             build-options: "-Pplatform=linux-athena"
+          - container: wpilib/systemcore-cross-ubuntu:2025-22.04
+            artifact-name: SystemCore
+            build-options: "-Pplatform=linux-systemcore"
           - container: wpilib/raspbian-cross-ubuntu:bullseye-22.04
             artifact-name: Arm32
             build-options: "-Pplatform=linux-arm32"
